# toppy

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  release.toml
scripts/: prepare_release.py
src/: app.rs  input.rs  main.rs  theme.rs
src/metrics/: collector.rs  format.rs  mod.rs
src/process/: actions.rs  mod.rs  model.rs  tree.rs
src/ui/: cpu.rs  help.rs  layout.rs  memory.rs  mod.rs  processes.rs  status.rs  text.rs  tree.rs
src/ui/widgets/: bar.rs
