[package]
name = "toppy"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Fast, colorful terminal system monitor for CPU, memory, and processes"
license = "MIT"
repository = "https://github.com/cesarferreira/toppy"

[[bin]]
name = "toppy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
sysinfo = "0.39"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
